--- a/playbook/roles/database/tasks/files/pg_hba.conf
+++ b/playbook/roles/database/tasks/files/pg_hba.conf
@@ -85,5 +85,5 @@
 # Database administrative login by Unix domain socket
 local  all             all                                 trust
 host   all             all            0.0.0.0/0            md5
-
 host   all             all            127.0.0.1/32         md5
+host   all            all             ::1/128              md5
