--- a/playbook/roles/supervisor/tasks/supervisor_install.yml
+++ b/playbook/roles/supervisor/tasks/supervisor_install.yml
@@ -1,8 +1,23 @@
-- name: Install supervisor
+- name: Install supervisor (RHEL/CentOS >= 8)
   dnf:
-    name: supervisor
+    name: "{{ supervisor_pkg }}"
     state: present
-    update_cache: yes
+    update_cache: true
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
+
+- name: Install supervisor (Debian/Ubuntu)
+  apt:
+    name: "{{ supervisor_pkg }}"
+    state: present
+    update_cache: true
+  when: ansible_os_family == "Debian"
+
+- name: Install supervisor (Arch Linux)
+  pacman:
+    name: "{{ supervisor_pkg }}"
+    state: present
+    update_cache: true
+  when: ansible_os_family == "Archlinux"
 
 - name: Ensure Supervisor log dir exists.
   file:
