--- a/playbook/roles/common/tasks/common_pkgs_spatial.yml
+++ b/playbook/roles/common/tasks/common_pkgs_spatial.yml
@@ -1,17 +1,23 @@
-
-- name: Install required spatial packages
+- name: Install required spatial packages (RHEL/CentOS >= 8)
   dnf:
-    name:
-      - "geos-devel"
-      - "libcurl-devel"
-      - "libgeotiff-devel"
-      - "libtiff-devel"
-      - "sqlite"
-      - "sqlite-devel"
-      - "{{ proj_gtest_pkg }}"
-      - "unzip"
+    name: "{{ spatial_deps_pkgs }}"
     state: present
     update_cache: yes
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
+
+- name: Install required spatial packages (Debian/Ubuntu)
+  apt:
+    name: "{{ spatial_deps_pkgs }}"
+    state: present
+    update_cache: yes
+  when: ansible_os_family == "Debian"
+
+- name: Install required spatial packages (Arch Linux)
+  pacman:
+    name: "{{ spatial_deps_pkgs }}"
+    state: present
+    update_cache: yes
+  when: ansible_os_family == "Archlinux"
 
 - name: Check if proj is installed
   command: proj
