--- a/playbook/roles/database/tasks/database_install_psql.yml
+++ b/playbook/roles/database/tasks/database_install_psql.yml
@@ -1,14 +1,41 @@
-- name: Install PostgreSQL {{ postgres_version }} server and psycopg2
+- name: Install PostgreSQL {{ postgres_version }} server and psycopg2 (RHEL/CentOS >= 8)
   dnf:
-    name: "@postgresql:{{ postgres_version }}/server,postgresql-contrib,postgresql-devel,{{ python_pkg }}-psycopg2"
+    name: "{{ postgresql_deps_pkgs }}"
     state: present
     update_cache: true
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
 
-- name: Install python3-psycopg2 if python_pkg is not python3
-  dnf:
-    name: "python3-psycopg2"
+- name: Install PostgreSQL {{ postgres_version }} server and psycopg2 (Debian/Ubuntu)
+  apt:
+    name: "{{ postgresql_deps_pkgs }}"
     state: present
-  when: python_pkg != 'python3'
+    update_cache: true
+  when: ansible_os_family == "Debian"
+
+- name: Install PostgreSQL {{ postgres_version }} server and psycopg2 (Arch Linux)
+  pacman:
+    name: "{{ postgresql_deps_pkgs }}"
+    state: present
+    update_cache: true
+  when: ansible_os_family == "Archlinux"
+
+- name: Install python3-psycopg2 if python_pkg is not python3 (RHEL/CentOS)
+  dnf:
+    name: "{{ postgresqL_python3_psycopg2 }}"
+    state: present
+  when: python_pkg != 'python3' and ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
+
+- name: Install python3-psycopg2 if python_pkg is not python3 (Debian/Ubuntu)
+  apt:
+    name: "{{ postgresqL_python3_psycopg2 }}"
+    state: present
+  when: python_pkg != 'python3' and ansible_os_family == "Debian"
+
+- name: Install python3-psycopg2 if python_pkg is not python3 (Arch Linux)
+  pacman:
+    name: "{{ postgresqL_python3_psycopg2 }}"
+    state: present
+  when: python_pkg != 'python3' and ansible_os_family == "Archlinux"
 
 - name: "Check if database {{ ckan_database.ckan_db }} exists in PostgreSQL"
   shell: psql -lqt | cut -d \| -f 1 | grep -qw {{ ckan_database.ckan_db }}
