Update package manager variable for OS family and upgrade pip

--- a/playbook/roles/common/tasks/common_python.yml
+++ b/playbook/roles/common/tasks/common_python.yml
@@ -65,3 +65,9 @@
       - "{{ python_pkg }}-pip"
     state: present
   when: pip3_check.failed
+
+- name: Upgrade pip
+  pip:
+    name:
+      - pip
+    extra_args: --upgrade
