--- a/playbook/roles/common/tasks/common_pkgs.yml
+++ b/playbook/roles/common/tasks/common_pkgs.yml
@@ -1,4 +1,4 @@
-- name: Set package manager variable for {{ ansible_os_family }}
+- name: "Set package manager for OS family: {{ ansible_os_family }}"
   set_fact:
     pkg_mgr: "{% if ansible_os_family == 'RedHat' and ansible_distribution_major_version|int >= 8 %}dnf{% elif ansible_os_family == 'Debian' %}apt{% elif ansible_os_family == 'Archlinux' %}pacman{% endif %}"
 
