--- a/playbook/host_vars/production_01.yml
+++ b/playbook/host_vars/production_01.yml
@@ -11,6 +11,7 @@ ansible_user: sudouser
 ansible_port: 222
 ansible_ssh_pass: sudouserpassword
 timezone: Europe/Madrid
+ssh_keys_enable: False
 
 ### Webserver #########################################
 proxy_server_name: localhost
