--- a/playbook/roles/common/tasks/main.yml
+++ b/playbook/roles/common/tasks/main.yml
@@ -1,6 +1,7 @@
-- name: "Include OS-specific variables for OS: {{ ansible_os_family }}-{{ ansible_distribution_major_version }}"
+- name: "Include OS-specific variables for OS: {{ ansible_os_family }}-{{ ansible_distribution_major_version }}.{{ ansible_distribution_minor_version }}"
   include_vars: "{{ item }}"
   with_first_found:
+    - "os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.{{ ansible_distribution_minor_version }}.yml"
     - "os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.yml"
     - "os_vars/{{ ansible_os_family | lower }}.yml"
 
@@ -23,3 +24,4 @@
   include_role:
     name: common
     tasks_from: common_config_ssh.yml
+  when: ssh_keys_enabled | bool
