--- a/playbook/os_vars/centos-9.yml
+++ b/playbook/os_vars/centos-9.yml
@@ -94,3 +94,8 @@ systemd_dir: /lib/systemd/system
 
 ### service
 init_dir: /etc/init.d
+
+## Ansible collections required
+ansible_collections:
+  - community.general
+  - community.postgresql
