--- a/playbook/os_vars/redhat-8.yml
+++ b/playbook/os_vars/redhat-8.yml
@@ -97,3 +97,8 @@ systemd_dir: /lib/systemd/system
 
 ### service
 init_dir: /etc/init.d
+
+## Ansible collections required
+ansible_collections:
+  - community.general
+  - community.postgresql
