--- a/playbook/roles/common/tasks/common_config_ssh.yml
+++ b/playbook/roles/common/tasks/common_config_ssh.yml
@@ -1,9 +1,9 @@
 
   # If using private repositories a SSH keypair should be placed in the provisioning/files/
   # directory. The filenames of the keypair files must begin with id_ (e.g. id_rsa + id_rsa.pub).
-  - name: Get filenames of {{ role_path }}/tasks/files of SSH keypair to copy
+  - name: Get filenames of {{ role_path }}/tasks/files/keys of SSH keypair to copy
     find:
-      paths: "{{ role_path }}/tasks/files/"
+      paths: "{{ role_path }}/files/keys"
       patterns: "^id_"
       use_regex: yes
     register: keypair_filenames
