--- a/playbook/roles/common/tasks/main.yml
+++ b/playbook/roles/common/tasks/main.yml
@@ -5,6 +5,11 @@
     - "os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.yml"
     - "os_vars/{{ ansible_os_family | lower }}.yml"
 
+- name: Install Ansible collections
+  include_role:
+    name: common
+    tasks_from: common_ansible.yml
+
 - name: Install basic dependencies
   include_role:
     name: common
