Update pg_hba.conf file path in database_config_psql.yml

--- a/playbook/roles/database/tasks/database_config_psql.yml
+++ b/playbook/roles/database/tasks/database_config_psql.yml
@@ -1,6 +1,6 @@
 - name: Add custom pg_hba file 
   copy:
-    src: files/pg_hba.conf
+    src: "{{ role_path }}/files/pg_hba.conf"
     dest: "{{ postgres_dir }}/pg_hba.conf"
     owner: "{{ ckan_database.postgres_user }}"
     group: "{{ ckan_database.postgres_password }}"
