--- a/playbook/roles/common/tasks/common_ansible.yml
+++ b/playbook/roles/common/tasks/common_ansible.yml
@@ -5,6 +5,8 @@
       loop: "{{ ansible_collections }}"
       register: galaxy_install
       ignore_errors: true
+      async: 30
+      poll: 15
 
     - name: Find local tar.gz file for each collection if ansible-galaxy install fails
       find:
