--- a/playbook/host_vars/production_01.yml
+++ b/playbook/host_vars/production_01.yml
@@ -228,7 +228,7 @@ solr_os_supported:
 solr_version: 9.5.0
 solr_port: 8983
 solr_host: 0.0.0.0
-solr_mirror: "https://dlcdn.apache.org"
+solr_mirror: "https://archive.apache.org/dist"
 solr_workspace: /root
 solr_tmp_dir: /tmp
 solr_schema_ckan_branch: "dev-v2.10"
